Increase hero font size to fix ascender/descender font issue causing the top and bottom of the font to be cut off.

--- a/app/styles/base/_library.scss
+++ b/app/styles/base/_library.scss
@@ -6,7 +6,7 @@
   width: 100%;
 
   @include media($medium-screen) {
-    font-size: 7em;
+    font-size: 8em;
   }
 }
 
